# Onlibry

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: Dockerfile  db.sqlite3  manage.py
backend/apps/catalog/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/catalog/migrations/: 0001_initial.py  0002_initial.py  0003_favorite.py  0004_userbook.py
backend/apps/users/: models.py  serializers.py  urls.py
backend/apps/users/migrations/: 0001_initial.py
backend/onlibry/: settings.py  urls.py  wsgi.py
frontend/: package-lock.json
frontend/src/: App.jsx  api.js  styles.css
