[project]
name = "onlibry-django"
version = "0.1.0"
requires-python = >=3.11"
dependencies = [
    "Django>=5.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "psycopg[binary]>=3.2",
    "django-filter>=24.2",
    "drf-spectacular>=0.27",
    "pytest>=8.2",
    "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "onlibry.settings"
pythonpath = ["backend"]
addopts = "-q"